# movie-search-platform

./: .env.example  .gitignore  README.md  docker-compose.yml  openapi.json
.github/workflows/: cd.yml  ci.yml
api/MovieSearch/: Directory.Packages.props  MovieSearch.slnx
api/MovieSearch/src/Api/: Api.csproj  Dockerfile  Program.cs  appsettings.Development.json  appsettings.json
database/migrations/: env.py  script.py.mako
database/migrations/versions/: 9a7bae7cc24d_initial_schema.py
mcp-server/: Dockerfile  pyproject.toml
mcp-server/src/: config.py
mcp-server/src/server/: asgi.py  constants.py  db.py  embeddings.py  logging_config.py  main.py  metrics.py  models.py  tools.py
mcp-server/tests/: conftest.py  test_embeddings.py  test_embeddings_provider.py  test_http_endpoints.py  test_models.py  test_tools.py
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: movie-search.json
pipeline/: Dockerfile  alembic.ini  pyproject.toml
pipeline/src/: main.py  models.py
pipeline/src/pipeline/: augmentation.py  cleaning.py  constants.py  embedding.py  imputation.py  loader.py  schemas.py  settings.py
pipeline/tests/: conftest.py  test_augmentation.py  test_cleaning.py  test_embedding.py  test_embedding_provider.py  test_imputation.py  test_loader.py
scripts/: Dockerfile  export_embeddings_atlas.py  load_test.js
terraform/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
terraform/bootstrap/: main.tf
terraform/environments/dev/: backend.hcl.example  main.tf  outputs.tf  providers.tf  variables.tf
terraform/environments/prod/: backend.hcl.example  main.tf  providers.tf  terraform.tfvars.example  variables.tf
terraform/modules/alb/: main.tf  outputs.tf  variables.tf
terraform/modules/compute/: main.tf  outputs.tf  tasks.tf  variables.tf
terraform/modules/ecr/: main.tf  outputs.tf  variables.tf
terraform/modules/ecs/: main.tf  outputs.tf  services.tf  tasks.tf  variables.tf
terraform/modules/elasticache/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf  variables.tf
terraform/modules/monitoring/: main.tf  variables.tf
terraform/modules/networking/: main.tf  outputs.tf  variables.tf
terraform/modules/rds/: main.tf  outputs.tf  variables.tf
terraform/modules/secrets/: main.tf  outputs.tf  variables.tf
(+112 files in other folders)
